Fixed OXUIB-1213 Dynamic theme logo overlaps launcher in Firefox
(cherry picked from commit fa54901ae1f26a57733c1c871885e96cb8be7760)

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -96,6 +96,8 @@
     margin: 0 24px;
     // Keep this for dynamic themes
     font-size: 0;
+    // this is needed for firefox when logo has auto width, see OXUIB-1213
+    height: 100%;
 
     .smartphone & {
         line-height: @appcontrol-height-smartphone;
